# Fastapi-clean-architecture

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  api.http  database.db  docker-compose.yml  main.py  notes-mg.py  pyproject.toml  run.sh  testing.db
app/: config.py  db.py  dependencies.py  logging_config.py  main.py
app/models/: hero_models.py
app/repositories/: hero_repository.py
app/routers/: hero_router.py
app/services/: hero_service.py
migrations/: env.py
migrations/versions/: 1350d4a96879_initial_migration_add_gender_to_hero_.py
tests/: conftest.py
tests/test_repositories/: test_hero_repository.py
tests/test_routers/: test_hero_router.py
tests/test_services/: test_hero_service.py
