[project]
name = "fastapi-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi[standard]>=0.117.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "sqlmodel>=0.0.25",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
